[package]
name = "pico_ssd1351_driver"
description = "A driver created for the SSD1351 OLED 1.5 inch rgb screen for the Pi Pico W"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/QuinnEsselbrugge/PICO_SSD1351_DRIVER"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Quinn <screwfighter@gmail.com>"]

[dependencies]
cortex-m = { version = "0.7"}
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.9"
fugit = "0.3.7"
embedded-alloc = "0.5.1"
